# ner

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  schemas.py
backend/db/: database.py  init_db.py  models.py
backend/services/: crud.py  llm_service.py  ml_service.py
frontend/: app.py
